# esp32_usb_repeater

./: .gitignore  README.md
firmware/: partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild
firmware/main/include/: global.h  http_server.h  log_handler.h  tcp_connect.h  usb_handler.h
firmware/main/src/: http_server.c  log_handler.c  main.c  tcp_connect.c  usb_handler.c  usbip_server.c
